<resources>
    <string name="app_name">ChatApp</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_log_in">activity_log_in</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_in">Đăng nhập</string>
    <item name="app_logo" type="id" />
    <item name="edt_email" type="id" />
    <item name="edt_password" type="id" />
    <item name="btnSignUp" type="id" />
    <item name="btnLogIn" type="id" />
    <item name="edt_name" type="id" />
    <string name="title_activity_signup">SignupActivity</string>
    <string name="bdctk">Bạn đã có tài khoản? LogIn</string>
    <string name="bcctk">Bạn chưa có tài khoản? Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Log Out</string>
    <string name="signup">Đăng ký</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="alreadyHaveAccount">Đã có tài khoản?</string>
    <string name="account">tài khoản</string>

</resources>