<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        tools:context="ui.auth.register.RegisterFragment">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tạo "
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/account"
                        android:textColor="@color/blue"
                        android:textStyle="bold"
                        android:textSize="30sp"/>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="24dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusBottomEnd="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Tên người dùng"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:inputType="textPersonName"
                        android:drawableStart="@drawable/baseline_person_24"
                        android:drawableTint="@color/grey"
                        android:drawablePadding="10dp"
                        tools:ignore="HardcodedText" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusBottomEnd="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:inputType="textEmailAddress"
                        android:drawableStart="@drawable/baseline_email_24"
                        android:drawableTint="@color/grey"
                        android:drawablePadding="10dp"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusBottomEnd="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:inputType="textPassword"
                        android:drawableStart="@drawable/baseline_key_24"
                        android:drawableTint="@color/grey"
                        android:drawablePadding="10dp"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusBottomEnd="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:inputType="textPassword"
                        android:drawableStart="@drawable/baseline_key_24"
                        android:drawableTint="@color/grey"
                        android:drawablePadding="10dp"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signup_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signup"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    app:cornerRadius="12dp"
                    android:gravity="center"
                    android:layout_margin="20dp"
                    android:backgroundTint="@color/blue"
                    android:paddingVertical="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_margin="10dp">

                    <View
                        android:layout_width="60dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:background="@color/grey" />

                    <View
                        android:layout_width="60dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="5dp"
                        android:background="@color/grey"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:text="@string/alreadyHaveAccount"/>

                    <TextView
                        android:id="@+id/go_login_screen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/blue"
                        android:text=" Đăng nhập"
                        tools:ignore="HardcodedText" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>

